prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
    environment: prod
    app.kubernetes.io/part-of: opsgpt
